# platform.kernel.swap-modules

./: .gitignore  Kbuild  build.sh  project.config  start.sh  stop.sh
buffer/: Kbuild  Makefile  Makefile.am  buffer.c  buffer.h  buffer_description.h  buffer_queue.c  buffer_queue.h  data_types.h  kernel_operations.h  space_dep_operations.c  space_dep_operations.h  space_dep_types_and_def.h  swap_buffer.sh  swap_buffer_errors.h  swap_buffer_module.c  swap_buffer_module.h  swap_buffer_to_buffer_queue.h
dalvik_handlers/: Kbuild  Makefile  Makefile.am  dalvik_defs.h  handlers.c  index_tree.c  index_tree.h
driver/: Kbuild  Makefile  Makefile.am  Makefile.in_  app_manage.h  debug.h  def_handlers.h  device_driver.c  device_driver.h  device_driver_to_driver_to_buffer.h  driver_defs.h  driver_to_buffer.c  driver_to_buffer.h  driver_to_msg.h  ec.c  ec.c.orig  ec.h  ec_ioctl.h  error_storage.c  error_storage.h  events.h  handlers_core.h  helper.c  helper.h  inperfa_driver.sh  insmod.sh  java_inst.c  java_inst.h  kernel_operations.h  ks_def_handler.c  ks_def_handler.h  legacy.c  legacy.h  module.c  module.h  module_common.h  new_dpf.h  patchko.sh  picl.h  probes.c  (+20 more)
driver/filters/: filter_by_pach.c  filter_by_pach.h  filter_by_path.c  filter_by_path.h  filters_core.c  filters_core.h
driver/msg/: swap_msg.c  swap_msg.h
driver/sspt/: ip.c  ip.h  sspt.h  sspt_debug.h  sspt_file.c  sspt_file.h  sspt_page.c  sspt_page.h  sspt_proc.c  sspt_proc.h  sspt_procs.c  sspt_procs.h
driver/struct/: file_probes.c  file_probes.h  ip.c  ip.h  page_probes.c  page_probes.h  proc_probes.c  proc_probes.h
driver_new/: Kbuild  Makefile  Makefile.am  device_driver.c  device_driver.h  device_driver_to_driver_to_buffer.h  driver_defs.h  driver_to_buffer.c  driver_to_buffer.h  driver_to_msg.h  ioctl_commands.h  swap_driver_errors.h  swap_driver_module.c  swap_driver_module.h  swap_driver_new.sh  swap_ioctl.h
energy/: Kbuild  debugfs_energy.c  debugfs_energy.h  energy.c  energy.h  energy_module.c  rational_debugfs.c  rational_debugfs.h  swap_energy.c  swap_energy.h  tm_stat.h
fbiprobe/: Kbuild  fbi_msg.c  fbiprobe.c  fbiprobe.h  regs.h
kprobe/: Kbuild  Makefile  Makefile.am  README  dbi_insn_slots.c  dbi_insn_slots.h  dbi_kdebug.h  dbi_kprobes.c  dbi_kprobes.h  dbi_kprobes_deps.c  dbi_kprobes_deps.h  dbi_uprobes.c  dbi_uprobes.h  inperfa_kprobe.sh  kprobes.c  kprobes.h  kprobes_arch.c  swap_kdebug.h  swap_kprobe.sh  swap_kprobes.c  swap_kprobes.h  swap_kprobes_deps.c  swap_kprobes_deps.h  swap_ktd.c  swap_ktd.h  swap_slots.c  swap_slots.h
kprobe/arch/: dbi_kprobes.c  dbi_kprobes.h
kprobe/arch/arm/swap-asm/: memory_rwx.c  memory_rwx.h  swap_kprobes.c  swap_kprobes.h
kprobe/arch/asm-arm/: dbi_kprobes.c  dbi_kprobes.h  dbi_kprobes_arm.S  dbi_kprobes_arm.h  dbi_kprobes_thumb.S  dbi_kprobes_thumb.h  memory_rwx.c  memory_rwx.h  swap_kprobes.c  swap_kprobes.h  trampoline_arm.S  trampoline_arm.h
kprobe/arch/asm-mips/: dbi_kprobes.c  dbi_kprobes.h
kprobe/arch/asm-x86/: dbi_kprobes.c  dbi_kprobes.h  dbi_kprobes_deps.c  swap_kprobes.c  swap_kprobes.h
kprobe/arch/x86/swap-asm/: swap_kprobes.c  swap_kprobes.h
kprobe/asm/: kprobes.h
ks_features/: Kbuild  Makefile  Makefile.am  features_data.c  features_data.h  file_ops.c  ks_features.c  ks_features.h  ksf_msg.c  swap_ks_features.sh  syscall_list.h
ks_manager/: Kbuild  Makefile.am  ks_manager.c  ks_manager.h  swap_ks_manager.sh
ksyms/: Kbuild  Makefile  Makefile.am  ksyms.c  ksyms.h  ksyms_init.h  ksyms_module.c  no_ksyms.c  swap_ksyms.sh
loader/: Kbuild  loader.h  loader_control.c  loader_debugfs.c  loader_module.c  loader_module.h  loader_pd.c  loader_pd.h  loader_storage.c
master/: Kbuild  swap_debugfs.c  swap_initializer.c  wait.c  wait.h
nsp/: Kbuild  nsp.c  nsp.h  nsp_debugfs.c  nsp_tdata.c  nsp_tdata.h
packaging/: swap-modules.spec
parser/: Kbuild  Makefile  Makefile.am  cpu_ctrl.c  cpu_ctrl.h  features.c  features.h  message_handler.c  message_handler.h  message_parser.c  message_parser.h  msg_buf.c  msg_buf.h  msg_cmd.c  msg_cmd.h  msg_parser.c  msg_parser.h  parser_defs.h  protocol_description.h  swap_message_parser.sh  swap_message_parser_errors.h  swap_message_parser_module.c  swap_msg_parser.c  us_inst.c  us_inst.h  usm_msg.c
preload/: Kbuild  preload_control.c  preload_control.h  preload_debugfs.c  preload_handlers.c  preload_handlers.h  preload_module.c  preload_module.h  preload_patcher.c  preload_patcher.h  preload_pd.c  preload_pd.h  preload_probe.c  preload_probe.h  preload_storage.c  preload_storage.h  preload_threads.c  preload_threads.h
retprobe/: Kbuild  retprobe.c  rp_msg.c
sampler/: Kbuild  Makefile  Makefile.am  kernel_operations.h  sampler_hrtimer.c  sampler_timer.c  swap_sampler_errors.h  swap_sampler_module.c  swap_sampler_module.c.orig  swap_sampler_module.h
task_ctx/: Kbuild  task_ctx.c
task_data/: Kbuild  task_data.c
tests/: Kbuild
uihv/: Kbuild  uihv_debugfs.c  uihv_module.c  uihv_module.h
uprobe/: Kbuild  Makefile  Makefile.am  swap_uprobe.sh  swap_uprobes.c  swap_uprobes.h
uprobe/arch/arm/swap-asm/: decode_thumb.c  decode_thumb.h  swap_uprobes.c  swap_uprobes.h  thumb_tramps.c  thumb_tramps.h  trampoline_thumb.S  trampoline_thumb.h
uprobe/arch/asm-arm/: swap_uprobes.c  swap_uprobes.h  trampoline_thumb.S  trampoline_thumb.h
uprobe/arch/asm-x86/: swap_uprobes.c  swap_uprobes.h
uprobe/arch/x86/swap-asm/: swap_sc_patch.c  swap_uprobes.c  swap_uprobes.h
us_manager/: Kbuild  Makefile  Makefile.am  callbacks.h  debugfs_us_manager.c  debugfs_us_manager.h  helper.c  helper.h  swap_us_manager.sh  us_def_handler.c  us_def_handler.h  us_manager.c  us_manager.h  us_manager_common.h  us_slot_manager.c  us_slot_manager.h  usm_msg.c  usm_msg.h
webprobe/: Kbuild  web_msg.c  webprobe.c  webprobe_debugfs.c  webprobe_prof.c
writer/: Kbuild  Makefile  Makefile.am  debugfs_writer.c  debugfs_writer.h  event_filter.c  event_filter.h  kernel_operations.c  kernel_operations.h  kernel_operations_arm.c  kernel_operations_x86.c  swap_msg.c  swap_msg.h  swap_writer_errors.h  swap_writer_module.c  (+1 more)
(+46 files in other folders)
